-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b110
The assert added by JDK-8150102 fails:
# Internal Error (C:\jprt\T\P1\192306.shade\s\hotspot\src\share\vm\c1\c1_Canonicalizer.cpp:248), pid=17176, tid=14596
# assert(!is_static_constant) failed: Constant field loads are folded during parsing
Stack: [0x0000008251b20000,0x0000008251c20000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x90ce10] os::platform_print_native_stack+0x100;; ?platform_print_native_stack@os@@SA_NPEAVoutputStream@@PEBXPEADH@Z+0x100
V [jvm.dll+0xab788f] VMError::report+0xabf;; ?report@VMError@@CAXPEAVoutputStream@@_N@Z+0xabf
V [jvm.dll+0xab875b] VMError::report_and_die+0x43b;; ?report_and_die@VMError@@SAXHPEBD0PEADPEAVThread@@PEAEPEAX40H_K@Z+0x43b
V [jvm.dll+0xab8d5d] VMError::report_and_die+0x5d;; ?report_and_die@VMError@@SAXPEAVThread@@PEBDH11PEAD@Z+0x5d
V [jvm.dll+0x46d288] report_vm_error+0x78;; ?report_vm_error@@YAXPEBDH00ZZ+0x78
V [jvm.dll+0xa73959] TimeStamp::milliseconds+0x39;; ?milliseconds@TimeStamp@@QEBA_JXZ+0x39
V [jvm.dll+0x42e8a2] CompileTask::print_impl+0x32;; ?print_impl@CompileTask@@CAXPEAVoutputStream@@PEAVMethod@@HH_NH2PEBD22@Z+0x32
V [jvm.dll+0x42ee01] CompileTask::print_line_on_error+0x81;; ?print_line_on_error@CompileTask@@QEAAXPEAVoutputStream@@PEADH@Z+0x81
V [jvm.dll+0xab7741] VMError::report+0x971;; ?report@VMError@@CAXPEAVoutputStream@@_N@Z+0x971
V [jvm.dll+0xab875b] VMError::report_and_die+0x43b;; ?report_and_die@VMError@@SAXHPEBD0PEADPEAVThread@@PEAEPEAX40H_K@Z+0x43b
V [jvm.dll+0xab8d5d] VMError::report_and_die+0x5d;; ?report_and_die@VMError@@SAXPEAVThread@@PEBDH11PEAD@Z+0x5d
V [jvm.dll+0x46d288] report_vm_error+0x78;; ?report_vm_error@@YAXPEBDH00ZZ+0x78
V [jvm.dll+0x27eeae] Canonicalizer::do_ArrayLength+0x10e;; ?do_ArrayLength@Canonicalizer@@UEAAXPEAVArrayLength@@@Z+0x10e
V [jvm.dll+0x28ff95] GraphBuilder::append_with_bci+0x55;; ?append_with_bci@GraphBuilder@@AEAAPEAVInstruction@@PEAV2@H@Z+0x55
V [jvm.dll+0x29a064] GraphBuilder::load_indexed+0x104;; ?load_indexed@GraphBuilder@@AEAAXW4BasicType@@@Z+0x104
V [jvm.dll+0x297dd6] GraphBuilder::iterate_bytecodes_for_block+0xcc6;; ?iterate_bytecodes_for_block@GraphBuilder@@AEAAPEAVBlockEnd@@H@Z+0xcc6
V [jvm.dll+0x297106] GraphBuilder::iterate_all_blocks+0x1e6;; ?iterate_all_blocks@GraphBuilder@@AEAAX_N@Z+0x1e6
V [jvm.dll+0x28cf62] GraphBuilder::GraphBuilder+0x3e2;; ??0GraphBuilder@@QEAA@PEAVCompilation@@PEAVIRScope@@@Z+0x3e2
V [jvm.dll+0x2a5fc6] IRScope::build_graph+0x26;; ?build_graph@IRScope@@AEAAPEAVBlockBegin@@PEAVCompilation@@H@Z+0x26
V [jvm.dll+0x2a4425] IRScope::IRScope+0x285;; ??0IRScope@@QEAA@PEAVCompilation@@PEAV0@HPEAVciMethod@@H_N@Z+0x285
V [jvm.dll+0x2a4180] IR::IR+0xc0;; ??0IR@@QEAA@PEAVCompilation@@PEAVciMethod@@H@Z+0xc0
V [jvm.dll+0x285d95] Compilation::build_hir+0xa5;; ?build_hir@Compilation@@AEAAXXZ+0xa5
V [jvm.dll+0x286442] Compilation::compile_java_method+0x152;; ?compile_java_method@Compilation@@AEAAHXZ+0x152
V [jvm.dll+0x286688] Compilation::compile_method+0xe8;; ?compile_method@Compilation@@AEAAXXZ+0xe8
V [jvm.dll+0x2855aa] Compilation::Compilation+0x20a;; ??0Compilation@@QEAA@PEAVAbstractCompiler@@PEAVciEnv@@PEAVciMethod@@HPEAVBufferBlob@@PEAVDirectiveSet@@@Z+0x20a
V [jvm.dll+0x287ddd] Compiler::compile_method+0x1bd;; ?compile_method@Compiler@@UEAAXPEAVciEnv@@PEAVciMethod@@HPEAVDirectiveSet@@@Z+0x1bd
V [jvm.dll+0x429b68] CompileBroker::invoke_compiler_on_method+0x6b8;; ?invoke_compiler_on_method@CompileBroker@@CAXPEAVCompileTask@@@Z+0x6b8
V [jvm.dll+0x42864a] CompileBroker::compiler_thread_loop+0x2ea;; ?compiler_thread_loop@CompileBroker@@SAXXZ+0x2ea
V [jvm.dll+0xa6ce28] JavaThread::thread_main_inner+0x1a8;; ?thread_main_inner@JavaThread@@QEAAXXZ+0x1a8
V [jvm.dll+0xa6bc25] JavaThread::run+0x1f5;; ?run@JavaThread@@UEAAXXZ+0x1f5
V [jvm.dll+0x9086c6] java_start+0xe6;; ?java_start@@YAIPEAVThread@@@Z+0xe6
C [msvcr120.dll+0x24f7f]
C [msvcr120.dll+0x25126]
C [KERNEL32.DLL+0x13d2]
C [ntdll.dll+0x15454]
# Internal Error (C:\jprt\T\P1\192306.shade\s\hotspot\src\share\vm\c1\c1_Canonicalizer.cpp:248), pid=17176, tid=14596
# assert(!is_static_constant) failed: Constant field loads are folded during parsing
Stack: [0x0000008251b20000,0x0000008251c20000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x90ce10] os::platform_print_native_stack+0x100;; ?platform_print_native_stack@os@@SA_NPEAVoutputStream@@PEBXPEADH@Z+0x100
V [jvm.dll+0xab788f] VMError::report+0xabf;; ?report@VMError@@CAXPEAVoutputStream@@_N@Z+0xabf
V [jvm.dll+0xab875b] VMError::report_and_die+0x43b;; ?report_and_die@VMError@@SAXHPEBD0PEADPEAVThread@@PEAEPEAX40H_K@Z+0x43b
V [jvm.dll+0xab8d5d] VMError::report_and_die+0x5d;; ?report_and_die@VMError@@SAXPEAVThread@@PEBDH11PEAD@Z+0x5d
V [jvm.dll+0x46d288] report_vm_error+0x78;; ?report_vm_error@@YAXPEBDH00ZZ+0x78
V [jvm.dll+0xa73959] TimeStamp::milliseconds+0x39;; ?milliseconds@TimeStamp@@QEBA_JXZ+0x39
V [jvm.dll+0x42e8a2] CompileTask::print_impl+0x32;; ?print_impl@CompileTask@@CAXPEAVoutputStream@@PEAVMethod@@HH_NH2PEBD22@Z+0x32
V [jvm.dll+0x42ee01] CompileTask::print_line_on_error+0x81;; ?print_line_on_error@CompileTask@@QEAAXPEAVoutputStream@@PEADH@Z+0x81
V [jvm.dll+0xab7741] VMError::report+0x971;; ?report@VMError@@CAXPEAVoutputStream@@_N@Z+0x971
V [jvm.dll+0xab875b] VMError::report_and_die+0x43b;; ?report_and_die@VMError@@SAXHPEBD0PEADPEAVThread@@PEAEPEAX40H_K@Z+0x43b
V [jvm.dll+0xab8d5d] VMError::report_and_die+0x5d;; ?report_and_die@VMError@@SAXPEAVThread@@PEBDH11PEAD@Z+0x5d
V [jvm.dll+0x46d288] report_vm_error+0x78;; ?report_vm_error@@YAXPEBDH00ZZ+0x78
V [jvm.dll+0x27eeae] Canonicalizer::do_ArrayLength+0x10e;; ?do_ArrayLength@Canonicalizer@@UEAAXPEAVArrayLength@@@Z+0x10e
V [jvm.dll+0x28ff95] GraphBuilder::append_with_bci+0x55;; ?append_with_bci@GraphBuilder@@AEAAPEAVInstruction@@PEAV2@H@Z+0x55
V [jvm.dll+0x29a064] GraphBuilder::load_indexed+0x104;; ?load_indexed@GraphBuilder@@AEAAXW4BasicType@@@Z+0x104
V [jvm.dll+0x297dd6] GraphBuilder::iterate_bytecodes_for_block+0xcc6;; ?iterate_bytecodes_for_block@GraphBuilder@@AEAAPEAVBlockEnd@@H@Z+0xcc6
V [jvm.dll+0x297106] GraphBuilder::iterate_all_blocks+0x1e6;; ?iterate_all_blocks@GraphBuilder@@AEAAX_N@Z+0x1e6
V [jvm.dll+0x28cf62] GraphBuilder::GraphBuilder+0x3e2;; ??0GraphBuilder@@QEAA@PEAVCompilation@@PEAVIRScope@@@Z+0x3e2
V [jvm.dll+0x2a5fc6] IRScope::build_graph+0x26;; ?build_graph@IRScope@@AEAAPEAVBlockBegin@@PEAVCompilation@@H@Z+0x26
V [jvm.dll+0x2a4425] IRScope::IRScope+0x285;; ??0IRScope@@QEAA@PEAVCompilation@@PEAV0@HPEAVciMethod@@H_N@Z+0x285
V [jvm.dll+0x2a4180] IR::IR+0xc0;; ??0IR@@QEAA@PEAVCompilation@@PEAVciMethod@@H@Z+0xc0
V [jvm.dll+0x285d95] Compilation::build_hir+0xa5;; ?build_hir@Compilation@@AEAAXXZ+0xa5
V [jvm.dll+0x286442] Compilation::compile_java_method+0x152;; ?compile_java_method@Compilation@@AEAAHXZ+0x152
V [jvm.dll+0x286688] Compilation::compile_method+0xe8;; ?compile_method@Compilation@@AEAAXXZ+0xe8
V [jvm.dll+0x2855aa] Compilation::Compilation+0x20a;; ??0Compilation@@QEAA@PEAVAbstractCompiler@@PEAVciEnv@@PEAVciMethod@@HPEAVBufferBlob@@PEAVDirectiveSet@@@Z+0x20a
V [jvm.dll+0x287ddd] Compiler::compile_method+0x1bd;; ?compile_method@Compiler@@UEAAXPEAVciEnv@@PEAVciMethod@@HPEAVDirectiveSet@@@Z+0x1bd
V [jvm.dll+0x429b68] CompileBroker::invoke_compiler_on_method+0x6b8;; ?invoke_compiler_on_method@CompileBroker@@CAXPEAVCompileTask@@@Z+0x6b8
V [jvm.dll+0x42864a] CompileBroker::compiler_thread_loop+0x2ea;; ?compiler_thread_loop@CompileBroker@@SAXXZ+0x2ea
V [jvm.dll+0xa6ce28] JavaThread::thread_main_inner+0x1a8;; ?thread_main_inner@JavaThread@@QEAAXXZ+0x1a8
V [jvm.dll+0xa6bc25] JavaThread::run+0x1f5;; ?run@JavaThread@@UEAAXXZ+0x1f5
V [jvm.dll+0x9086c6] java_start+0xe6;; ?java_start@@YAIPEAVThread@@@Z+0xe6
C [msvcr120.dll+0x24f7f]
C [msvcr120.dll+0x25126]
C [KERNEL32.DLL+0x13d2]
C [ntdll.dll+0x15454]
- relates to
-
JDK-8158546 C1 compilation fails with "Constant field loads are folded during parsing"
-
- Resolved
-
-
JDK-8150547 C1: Figure out if Constants are universally handled during parsing
-
- Closed
-
-
JDK-8151017 [TESTBUG] test/compiler/c1/CanonicalizeArrayLength does not work on product builds
-
- Closed
-
-
JDK-8150102 C1 should fold arraylength for constant/trusted arrays
-
- Resolved
-