8150534: C1 compilation fails with "Constant field loads are folded during parsing"

Reviewed-by: vlivanov, thartmann