hotspot/test/compiler/c1/CanonicalizeArrayLength.java
@@ -23,12 +23,13 @@
 
 /*
  * @test
- * @bug 8150102 8150514
+ * @bug 8150102 8150514 8150534
  * @summary C1 crashes in Canonicalizer::do_ArrayLength() after fix for JDK-8150102
  * @run main/othervm -XX:CompileThreshold=100 -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:-BackgroundCompilation CanonicalizeArrayLength
- *
+ * @run main/othervm -XX:CompileThreshold=100 -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:-BackgroundCompilation -XX:+PatchALot CanonicalizeArrayLength
+ * @run main/othervm -XX:CompileThreshold=100 -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:-BackgroundCompilation -XX:ScavengeRootsInCode=0 CanonicalizeArrayLength
+ * @run main/othervm -XX:CompileThreshold=100 -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:-BackgroundCompilation -XX:ScavengeRootsInCode=1 CanonicalizeArrayLength
  */
-
 public class CanonicalizeArrayLength {
     int[] arr = new int[42];
     int[] arrNull = null;
